--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/kcartoon/CatherineCordier_3_12072021#readme",
   "dependencies": {
-    "sass":"1.35.2"
+    "sass": "^1.35.2"
   }
-
 }
