--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projet3",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:./public/css/style.css"
+    "sass": "sass --watch ./sass/styles.scss:./public/css/style.css"
   },
   "repository": {
     "type": "git",
